--- a/package.json
+++ b/package.json
@@ -21,14 +21,21 @@
     "@angular/platform-browser": "~2.1.0",
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.1.0",
+    "@types/chai": "^3.4.34",
+    "@types/isomorphic-fetch": "0.0.31",
+    "@types/node": "^6.0.48",
+    "angular2-apollo": "^0.8.0",
+    "apollo-client": "^0.5.4",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
     "graphql": "^0.7.2",
+    "graphql-tag": "^0.1.16",
     "morgan": "^1.7.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
+    "typed-graphql": "^1.0.2",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
@@ -46,6 +53,7 @@
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
+    "typed-graphql": "^1.0.2",
     "typescript": "~2.0.3"
   }
 }
