--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "graphql-tag": "^0.1.16",
     "morgan": "^1.7.0",
     "rxjs": "5.0.0-beta.12",
+    "subscriptions-transport-ws": "^0.3.1",
     "ts-helpers": "^1.1.1",
     "typed-graphql": "^1.0.2",
     "zone.js": "^0.6.23"
