--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,11 +1,15 @@
 {
   "compilerOptions": {
+    "baseUrl": "",
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": ["es6", "dom"],
+    "lib": [
+      "es2016",
+      "dom"
+    ],
     "mapRoot": "./",
-    "module": "es6",
+    "module": "es2015",
     "moduleResolution": "node",
     "outDir": "../dist/out-tsc",
     "sourceMap": true,
@@ -13,8 +17,5 @@
     "typeRoots": [
       "../node_modules/@types"
     ]
-  },
-  "include" : [
-    "../node_modules/typed-graphql/graphql.d.ts"
-  ]
+  }
 }
